--- a/templates/onduleur/add.html.twig
+++ b/templates/onduleur/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Éditer la tablette | Inventaire{% endblock %}
+{% block title %}Ajouter une onduleur | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
@@ -11,14 +11,14 @@
     <div class="d-flex mb-4 mt-3">
         <span class="fa-stack me-2 ms-n1">
             <i class="fas fa-circle fa-stack text-300"></i>
-            <i class="fa-inverse fa-stack-1x text-danger fas fa-tablet"></i>
+            <i class="fa-inverse fa-stack-1x text-danger fas fa-car-battery"></i>
         </span>
         <div class="col">
             <h5 class="mb-0 text-danger position-relative">
-                <span class="bg-200 dark__bg-1100 pe-3">Tablettes</span>
+                <span class="bg-200 dark__bg-1100 pe-3">Onduleurs</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet d'éditer une tablette.</p>
+            <p class="mb-0">Cette page vous permet d'ajouter un onduleur.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -32,34 +32,35 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Éditer une tablette</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.tablette.show') }}">
+                        <h5 class="mb-0">Ajouter un onduleur</h5>
+                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.onduleur.show') }}">
                             Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
-                        {{ form_start(tabletteForm) }}
-                            {{ form_row(tabletteForm.nom) }}
-                            {{ form_row(tabletteForm.ip) }}
-                            {{ form_row(tabletteForm.marque) }}
-                            {{ form_row(tabletteForm.modele) }}
-                            {{ form_row(tabletteForm.utilisateur) }}
-                            {{ form_row(tabletteForm.numero_serie) }}
-                            {{ form_row(tabletteForm.emplacement) }}
-                            {{ form_row(tabletteForm.entreprise) }}
-                            {{ form_row(tabletteForm.etat) }}
-                            {{ form_row(tabletteForm.date_installation) }}
-                            {{ form_row(tabletteForm.date_achat) }}
-                            {{ form_row(tabletteForm.date_garantie) }}
-                            {{ form_row(tabletteForm.commentaire) }}
+                        {{ form_start(onduleurForm) }}
+                            {{ form_row(onduleurForm.nom) }}
+                            {{ form_row(onduleurForm.marque) }}
+                            {{ form_row(onduleurForm.modele) }}
+                            {{ form_row(onduleurForm.numero_serie) }}
+                            {{ form_row(onduleurForm.capacite) }}
+                            {{ form_row(onduleurForm.type_prise) }}
+                            {{ form_row(onduleurForm.emplacement) }}
+                            {{ form_row(onduleurForm.entreprise) }}
+                            {{ form_row(onduleurForm.fournisseur) }}
+                            {{ form_row(onduleurForm.etat) }}
+                            {{ form_row(onduleurForm.date_installation) }}
+                            {{ form_row(onduleurForm.date_achat) }}
+                            {{ form_row(onduleurForm.date_garantie) }}
+                            {{ form_row(onduleurForm.commentaire) }}
                             <label class="fw-medium">
                                 <a style="color: red">*</a>
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
                             </div>
-                        {{ form_end(tabletteForm) }}
+                        {{ form_end(onduleurForm) }}
                     </div>
                 </div>
             </div>
