--- a/templates/pc_fixe/edit.html.twig
+++ b/templates/pc_fixe/edit.html.twig
@@ -64,6 +64,10 @@
                                 {{ form_row(pcFixeForm.date_achat) }}
                                 {{ form_row(pcFixeForm.date_garantie) }}
                                 {{ form_row(pcFixeForm.commentaire) }}
+                                <label class="fw-medium">
+                                    <a style="color: red">*</a>
+                                    Champs obligatoires
+                                </label>
                                 <div class="d-flex justify-content-end">
                                     <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
                                 </div>
