--- a/templates/telephone_fixe/edit.html.twig
+++ b/templates/telephone_fixe/edit.html.twig
@@ -11,7 +11,7 @@
     <div class="d-flex mb-4 mt-3">
         <span class="fa-stack me-2 ms-n1">
             <i class="fas fa-circle fa-stack text-300"></i>
-            <i class="fa-inverse fa-stack-1x text-danger fas fa-mobile-screen-button"></i>
+            <i class="fa-inverse fa-stack-1x text-danger fas fa-phone"></i>
         </span>
         <div class="col">
             <h5 class="mb-0 text-danger position-relative">
