--- a/templates/telephone_portable/add.html.twig
+++ b/templates/telephone_portable/add.html.twig
@@ -53,6 +53,10 @@
                             {{ form_row(telephoneForm.date_achat) }}
                             {{ form_row(telephoneForm.date_garantie) }}
                             {{ form_row(telephoneForm.commentaire) }}
+                            <label class="fw-medium">
+                                <a style="color: red">*</a>
+                                Champs obligatoires
+                            </label>
                             <div class="d-flex justify-content-end">
                                 <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
                             </div>
